--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <div id="listaFilmes"></div>
         <section class="hahaha">
-          <p class="pp">Kenji Rocha Nakajima</p>
+          <p class="pp">Kenji R. Nakajima</p>
           <a href="https://github.com/kenjirn">
               <i class="fa fa-github-alt" aria-hidden="true"></i> < GitHub >
             </a>
